Closed Bug 1869658 Opened 2 years ago Closed 2 years ago

Crash in [@ OOM | unknown | base::SharedMemory::memory]

Categories

(Core :: Graphics: Canvas2D, defect, P3)

Unspecified
Windows 10
defect

Tracking

()

RESOLVED FIXED
122 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox120 --- unaffected
firefox121 --- unaffected
firefox122 --- fixed

People

(Reporter: aosmond, Assigned: aosmond)

References

(Blocks 1 open bug, Regression)

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

Crash report: https://crash-stats.mozilla.org/report/index/dfc666c7-b621-4b1d-b2dd-79cb90231212

Reason: EXCEPTION_ACCESS_VIOLATION_READ

Top 10 frames of crashing thread:

0  xul.dll  mozilla::UniquePtr<void, base::SharedMemory::MappingDeleter>::get const  mfbt/UniquePtr.h:286
0  xul.dll  base::SharedMemory::memory const  ipc/chromium/src/base/shared_memory.h:92
0  xul.dll  mozilla::ipc::SharedMemoryBasic::memory const  ipc/glue/SharedMemoryBasic_chromium.h:60
0  xul.dll  mozilla::detail::AtomicBase<mozilla::layers::CanvasDrawEventRecorder::State, 2>::operator=  gfx/layers/CanvasDrawEventRecorder.h:150
0  xul.dll  mozilla::layers::CanvasDrawEventRecorder::GetContiguousBuffer  gfx/layers/CanvasDrawEventRecorder.cpp
1  xul.dll  mozilla::gfx::ContiguousBufferStream::RecordEvent<mozilla::gfx::RecordedSourceSurfaceCreation>  gfx/2d/RecordedEvent.h:279
2  xul.dll  mozilla::gfx::DrawEventRecorderPrivate::StoreSourceSurfaceRecording  gfx/2d/DrawEventRecorder.cpp:61
3  xul.dll  mozilla::gfx::EnsureSurfaceStoredRecording  gfx/2d/DrawTargetRecording.cpp:60
4  xul.dll  mozilla::gfx::DrawTargetRecording::DrawSurface  gfx/2d/DrawTargetRecording.cpp:432
5  xul.dll  mozilla::dom::CanvasRenderingContext2D::DrawWindow  dom/canvas/CanvasRenderingContext2D.cpp:5850

Set release status flags based on info from the regressing bug 1863914

Pushed by aosmond@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/b74ed8e9d95a Fix usage of CanvasBuffer on failure paths. r=gfx-reviewers,lsalzman
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 122 Branch
Crash Signature: [@ OOM | unknown | base::SharedMemory::memory] [@ base::SharedMemory::memory ] → [@ OOM | unknown | base::SharedMemory::memory] [@ base::SharedMemory::memory ] [@ IPCError-content | SHMEM_CREATED_MESSAGE Payload error: message could not be deserialized ]
Blocks: 1870681
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: