Bug 1869658 - Fix usage of CanvasBuffer on failure paths. r=gfx-reviewers,lsalzman

Differential Revision: https://phabricator.services.mozilla.com/D196232